# mlops

./: .gitignore  .opencode.json  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
libs/diagrams/: Dockerfile  pyproject.toml
libs/diagrams/src/diagrams_generation/: __init__.py
libs/diagrams/src/diagrams_generation/adapters/: logging.py  mingrammer_renderer.py
libs/diagrams/src/diagrams_generation/application/: ports.py
libs/diagrams/src/diagrams_generation/core/: loader.py
libs/diagrams/src/diagrams_generation/domain/: diagram.py
libs/diagrams/src/diagrams_generation/presentation/: cli.py
libs/diagrams/tests/: test_builder.py  test_cli.py  test_domain_and_loader.py
libs/mlops-shared/: pyproject.toml
libs/mlops-shared/src/mlops_shared/: __init__.py  evaluation.py  logging.py  paths.py  pipeline.py
libs/mlops-shared/tests/unit/: test_config.py  test_evaluation.py  test_logging.py  test_paths.py  test_pipeline.py
libs/ssg/: Makefile  pyproject.toml
libs/ssg-i18n/: pyproject.toml
libs/ssg-i18n-machine-translation/: Makefile  pyproject.toml
libs/ssg-i18n-machine-translation/src/ssg_i18n_machine_translation/: __init__.py  transformers_text_translator.py
libs/ssg-i18n-machine-translation/src/ssg_i18n_machine_translation/presentation/: __init__.py  plugin.py
libs/ssg-i18n-machine-translation/tests/unit/: test_transformers_text_translator.py
libs/ssg-i18n/evaluation/: baseline.json  evaluate_translation.py
libs/ssg-i18n/src/ssg_i18n/: __init__.py
libs/ssg-i18n/src/ssg_i18n/application/: __init__.py  document_translation.py  i18n_site_variant_provider.py  terminology_mapper.py  translation.py
libs/ssg-i18n/src/ssg_i18n/domain/: __init__.py  locale.py  translation_catalog.py
libs/ssg-i18n/src/ssg_i18n/infrastructure/: __init__.py  yaml_translation_catalog_repository.py
libs/ssg-i18n/src/ssg_i18n/presentation/: __init__.py  plugin.py
libs/ssg-i18n/tests/integration/: test_i18n_static_site_generation.py
libs/ssg-i18n/tests/unit/: test_document_translator.py  test_i18n_site_variant_provider.py  test_locale.py  test_terminology_mapper.py  test_yaml_translation_catalog_repository.py
libs/ssg-latex/: pyproject.toml
libs/ssg-latex/src/ssg_latex/: __init__.py  package-lock.json  package.json
libs/ssg-latex/src/ssg_latex/application/: latex_processor.py
libs/ssg-latex/src/ssg_latex/infrastructure/: __init__.py  subprocess_renderer.py
libs/ssg-latex/src/ssg_latex/presentation/: __init__.py  plugin.py
libs/ssg-latex/tests/: __init__.py
libs/ssg-latex/tests/unit/: __init__.py  test_latex_processor.py  test_plugin.py  test_subprocess_renderer.py
libs/ssg-notebook-render/: pyproject.toml
libs/ssg-notebook-render/src/ssg_notebook_render/: __init__.py  notebook_components.py  notebook_content_renderer.py  notebook_fragment_renderer.py
libs/ssg-notebook-render/src/ssg_notebook_render/templates/: notebook_code_cell.html  notebook_html_output.html  notebook_image_output.html  notebook_output.html  notebook_widget_view_output.html
libs/ssg-notebook-render/tests/unit/: test_notebook_content_renderer.py  test_notebook_content_renderer_images.py
libs/ssg-syntax-highlighting/: pyproject.toml
libs/ssg-syntax-highlighting/src/ssg_syntax_highlighting/: __init__.py
libs/ssg-syntax-highlighting/src/ssg_syntax_highlighting/application/: syntax_highlighter.py
libs/ssg-syntax-highlighting/src/ssg_syntax_highlighting/infrastructure/: pygments_highlighter.py
libs/ssg-syntax-highlighting/src/ssg_syntax_highlighting/presentation/: plugin.py
libs/ssg-syntax-highlighting/tests/unit/: test_syntax_highlighting.py
libs/ssg/src/ssg/: __init__.py
libs/ssg/src/ssg/application/: dependency_tracker.py  html_headings.py  ports.py  site_preview.py  static_site_builder.py
libs/ssg/src/ssg/domain/: site.py
libs/ssg/src/ssg/infrastructure/: jinja_page_renderer.py  local_preview_server.py  (+5 more)
libs/ssg/tests/integration/: test_static_site_generation.py
libs/ssg/tests/playwright/: test_built_site_smoke.py
libs/videos/: Dockerfile  Makefile  manim.cfg  pyproject.toml
libs/videos-linter/: pyproject.toml
libs/videos-linter/src/videos_linter/: linter_service.py
libs/videos-linter/tests/: test_blur.py  test_contrast.py  test_linter_service.py  test_motion.py  test_overlap.py
libs/videos/tests/: conftest.py
projects/nyc_taxi_demand_forecasting/: Makefile  README.md  pyproject.toml
projects/nyc_taxi_demand_forecasting/configs/: project.yaml  train.yaml
projects/nyc_taxi_demand_forecasting/docs/: 01_problem_framing.md  02_data_collection.md  02_dataset_collection.md  03_data_preprocessing.md  03_event_logs_to_supervised_learning.md  05_feature_store_with_feast_duckdb.md  05_train.md  06_evaluate.md  07_deploy.md  08_monitoring.md  10_mlflow_model_registry.md
projects/nyc_taxi_demand_forecasting/feature_repo/: data_sources.py  entities.py  feature_store.yaml  feature_views.py
projects/nyc_taxi_demand_forecasting/notebooks/: eda.ipynb  feature_engineering.ipynb  index.ipynb  tuning.ipynb
projects/nyc_taxi_demand_forecasting/references/: dir_structure.md
projects/nyc_taxi_demand_forecasting/reports/: monitoring.md
projects/nyc_taxi_demand_forecasting/src/nyc_taxi_demand_forecasting/: __init__.py  configuration.py
projects/nyc_taxi_demand_forecasting/tests/bdd/: test_predict.py
projects/nyc_taxi_demand_forecasting/tests/unit/: test_configuration.py
videos/: pyproject.toml
videos/concepts/: _concept_components.py  bias_variance_tradeoff.py  crisp_dm.py  mlops_lifecycle.py
videos/definition/: crisp_dm.yaml  mlops_lifecycle.yaml  underfit_vs_overfit.yaml
videos/src/mlops_videos/concepts/: _base.py  _registry.py  bias_variance_tradeoff.py  crisp_dm.py  mlops_lifecycle.py  underfit_vs_overfit.py
videos/tests/: conftest.py
videos/tests/integration/: test_visual_regression.py
videos/tests/unit/adapters/: test_builder_coordinates.py  test_logger.py
videos/tests/unit/concepts/: test_registry.py
videos/tests/unit/core/: test_concept.py  test_director.py  test_narrative.py  test_narrative_consistency.py
(+335 files in other folders)
