[project]
name = "mlops-monorepo"
version = "0.1.0"
description = "Local-first MLOps monorepo with real-world projects and generic static publishing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "deptry==0.25.1",
  "import-linter==2.11",
  "mypy==2.1.0",
  "pandas-stubs==3.0.3.260530",
  "pre-commit==4.6.0",
  "pytest==9.0.3",
  "pytest-bdd==8.1.0",
  "pytest-cov==7.1.0",
  "pytest-playwright==0.8.0",
  "radon==6.0.1",
  "ruff==0.15.15",
  "semgrep==1.165.0",
  "types-PyYAML==6.0.12.20260518",
  "types-requests==2.33.0.20260518",
]

[tool.uv.workspace]
members = [
  "libs/mlops_shared",
  "libs/ssg",
  "libs/ssg-notebook-render",
  "projects/nyc_taxi_demand_forecasting",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["libs", "projects"]
addopts = "-q -ra --tb=short --import-mode=importlib --strict-markers --strict-config"
markers = [
  "integration: package-local integration tests",
  "playwright: browser-based static site checks",
]

[tool.coverage.run]
branch = true
source = ["libs", "projects"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
strict_equality = true
packages = [
  "mlops_shared",
  "nyc_taxi_demand_forecasting",
  "ssg",
  "ssg_notebook_render",
]

[tool.deptry]
known_first_party = [
  "mlops_shared",
  "nyc_taxi_demand_forecasting",
  "ssg",
  "ssg_notebook_render",
]

[tool.importlinter]
root_packages = [
  "mlops_shared",
  "nyc_taxi_demand_forecasting",
  "ssg",
  "ssg_notebook_render",
]

[[tool.importlinter.contracts]]
name = "Shared libraries do not import projects"
type = "forbidden"
source_modules = ["mlops_shared", "ssg", "ssg_notebook_render"]
forbidden_modules = ["nyc_taxi_demand_forecasting"]

[[tool.importlinter.contracts]]
name = "Site domain stays independent"
type = "forbidden"
source_modules = ["ssg.domain"]
forbidden_modules = ["ssg.infrastructure", "ssg.presentation"]

[[tool.importlinter.contracts]]
name = "Site application stays adapter independent"
type = "forbidden"
source_modules = ["ssg.application"]
forbidden_modules = ["ssg.infrastructure", "ssg.presentation"]

[[tool.importlinter.contracts]]
name = "Static site generator stays MLOps agnostic"
type = "forbidden"
source_modules = ["ssg", "ssg_notebook_render"]
forbidden_modules = ["mlops_shared", "nyc_taxi_demand_forecasting"]

[[tool.importlinter.contracts]]
name = "Notebook renderer stays an SSG extension"
type = "forbidden"
source_modules = ["ssg_notebook_render"]
forbidden_modules = ["ssg.infrastructure", "ssg.presentation"]
