[project]
name = "mlops-shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml==6.0.3"]

[tool.deptry.package_module_name_map]
mlops-shared = "mlops_shared"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --tb=short --import-mode=importlib"
