[project]
name = "ssg-i18n-machine-translation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "ssg-i18n",
]

[tool.uv.sources]
ssg-i18n = { workspace = true }

[tool.deptry.package_module_name_map]
ssg-i18n = "ssg_i18n"
ssg-i18n-machine-translation = "ssg_i18n_machine_translation"

[tool.deptry.per_rule_ignores]
DEP003 = ["ssg_i18n_machine_translation"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"
