[project]
name = "ssg-i18n-machine-translation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "ssg-i18n",
]

[project.optional-dependencies]
transformers = [
  "transformers>=4.38.0,<5",
  "torch>=2.0.0",
  "sentencepiece>=0.2.0",
]

[project.entry-points."ssg_i18n.text_translators"]
transformers = "ssg_i18n_machine_translation.presentation.plugin:create_transformers_text_translator"

[tool.uv.sources]
ssg-i18n = { workspace = true }

[tool.deptry.package_module_name_map]
ssg-i18n = "ssg_i18n"
ssg-i18n-machine-translation = "ssg_i18n_machine_translation"

[tool.deptry.per_rule_ignores]
DEP003 = ["ssg_i18n_machine_translation"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --tb=short --import-mode=importlib"
