[project]
name = "ssg-i18n"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pyyaml==6.0.3",
  "ssg",
  "mistletoe>=1.3.0",
]

[project.entry-points."ssg.site_variant_providers"]
i18n = "ssg_i18n.presentation.plugin:create_i18n_site_variant_provider"

[project.optional-dependencies]
evaluation = [
  "evaluate>=0.4.6",
  "sacrebleu>=2.6.0",
]

[tool.uv.sources]
ssg = { workspace = true }

[tool.deptry.package_module_name_map]
ssg = "ssg"
ssg-i18n = "ssg_i18n"

[tool.deptry.per_rule_ignores]
DEP003 = ["ssg_i18n"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --tb=short --import-mode=importlib"
markers = [
  "integration: package-local integration tests",
]
