[project]
name = "ssg-syntax-highlighting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pygments==2.20.0",
  "ssg",
]

[project.entry-points."ssg.html_post_processors"]
pygments = "ssg_syntax_highlighting.presentation.plugin:create_pygments_html_post_processor"

[tool.uv.sources]
ssg = { workspace = true }

[tool.deptry.package_module_name_map]
ssg = "ssg"
ssg-syntax-highlighting = "ssg_syntax_highlighting"

[tool.deptry.per_rule_ignores]
DEP003 = ["ssg_syntax_highlighting"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --tb=short --import-mode=importlib"
