[project]
name = "ssg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "jinja2==3.1.6",
  "markdown-it-py==4.2.0",
  "markupsafe==3.0.3",
  "pyyaml==6.0.3",
]

[tool.deptry.package_module_name_map]
ssg = "ssg"

[tool.deptry.per_rule_ignores]
DEP003 = ["ssg"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"
