[project]
name = "ssg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "jinja2==3.1.6",
  "markdown-it-py==4.2.0",
  "mdit-py-plugins>=0.3.3",
  "markupsafe==3.0.3",
  "pyyaml==6.0.3",
  "watchdog==6.0.0",
]

[project.optional-dependencies]
i18n = ["ssg-i18n"]
i18n-transformers = ["ssg-i18n", "ssg-i18n-machine-translation[transformers]"]
syntax-highlighting = ["ssg-syntax-highlighting"]
all = ["ssg-i18n", "ssg-i18n-machine-translation[transformers]", "ssg-syntax-highlighting"]

[tool.uv.sources]
ssg-i18n = { workspace = true }
ssg-i18n-machine-translation = { workspace = true }
ssg-syntax-highlighting = { workspace = true }

[tool.deptry.package_module_name_map]
ssg = "ssg"
ssg-i18n = "ssg_i18n"
ssg-i18n-machine-translation = "ssg_i18n_machine_translation"
ssg-syntax-highlighting = "ssg_syntax_highlighting"

[tool.deptry.per_rule_ignores]
DEP002 = ["ssg-i18n", "ssg-i18n-machine-translation", "ssg-syntax-highlighting"]
DEP003 = ["ssg"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"
