[project]
name = "videos"
version = "0.1.0"
description = "Deterministic Python-first ManimCE video production engine for educational ML content"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
manim = ["manim"]
concepts = []

[tool.deptry]
known_first_party = ["videos"]
package_module_name_map = {videos = "videos"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --tb=short --import-mode=importlib"
markers = [
    "docker: tests that require Docker with Manim to render scenes",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"
