[project]
name = "nyc-taxi-demand-forecasting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.4.0",
  "fastapi>=0.110.0",
  "feast[duckdb]>=0.56.0",
  "ibis-framework>=9.0.0",
  "ipywidgets>=8.0.0",
  "mlflow>=3.7.0",
  "mlops-shared",
  "numpy>=2.0.0",
  "pandas==2.3.3",
  "pyarrow==24.0.0",
  "requests==2.34.2",
  "uvicorn>=0.28.0",
  "optuna>=3.6.0",
]

[project.optional-dependencies]
notebooks = [
  "ipykernel>=7.1.0",
  "matplotlib>=3.10.0",
  "nbclient>=0.11.0",
  "nbconvert>=7.17.1",
]

[tool.uv.sources]
mlops-shared = { workspace = true }

[tool.deptry.package_module_name_map]
nyc-taxi-demand-forecasting = "nyc_taxi_demand_forecasting"
mlops-shared = "mlops_shared"

[tool.deptry.per_rule_ignores]
DEP001 = ["data_sources", "entities"]
DEP002 = [
  "duckdb",
  "mlflow",
  "pyarrow",
  "ipykernel",
  "matplotlib",
  "nbclient",
  "nbconvert",
  "ibis-framework",
  "uvicorn",
  "ipywidgets",
  "optuna",
]
DEP003 = ["nyc_taxi_demand_forecasting", "fastapi"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --tb=short --import-mode=importlib"
